--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
     "prepare": "husky",
-    "test": "echo \"Run test here... "
-    
+    "lint": "eslint .",
+    "test": "echo \"Run test here...\" "
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
@@ -25,6 +24,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
